<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.6</version>
    <relativePath/>
  </parent>

  <groupId>com.linrun</groupId>
  <artifactId>ai-interview</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>ai-interview</name>
  <description>AI Interview Platform</description>

  <modules>
    <module>backend</module>
  </modules>

    <properties>
    <java.version>21</java.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <tika.version>2.9.2</tika.version>
    <poi.version>5.2.5</poi.version>
    <lombok.version>1.18.36</lombok.version>
    <!-- JUnit 版本不再手动钉死，交由 spring-boot-starter-parent 统一管理。
         钉成旧版（如 5.12.0 / platform 1.12.0）会与 Spring Boot / Spring Framework 的
         SpringExtension 不兼容（NoSuchMethodError: ExtensionContext$Store.computeIfAbsent），
         导致所有 @SpringBootTest 集成测试无法启动。 -->
    <redisson.version>3.52.0</redisson.version>
    <mybatis-plus.version>3.5.7</mybatis-plus.version>
    <druid.version>1.2.23</druid.version>
    <easyexcel.version>3.3.4</easyexcel.version>
    <minio.version>8.5.1</minio.version>
    <onnxruntime.version>1.17.1</onnxruntime.version>
    <mapstruct.version>1.6.3</mapstruct.version>
    <itext.version>8.0.5</itext.version>
    <pinyin4j.version>2.5.0</pinyin4j.version>
    <springdoc.version>2.8.17</springdoc.version>
    <!-- commons-compress 1.27.x 运行时需要 ChecksumInputStream（commons-io 2.16+） -->
    <commons-io.version>2.16.1</commons-io.version>

    <!-- LangChain4j（对齐业界实践：核心 1.11.0，扩展模块 1.11.0-beta19） -->
    <langchain4j.version>1.11.0</langchain4j.version>
    <langchain4j-beta.version>1.11.0-beta19</langchain4j-beta.version>
    <!-- surefire 默认排除评测组：rag-eval（RAG 检索，连真实 ES + DashScope）、
         agent-eval（面试 Agent Critic 质量门，连真实 DashScope）。
         评测集见 eval/。触发评测时用 -Dtest.excludedGroups= 清空该值（见 backend/pom.xml surefire 配置注释）。 -->
    <test.excludedGroups>rag-eval,agent-eval</test.excludedGroups>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-bom</artifactId>
        <version>${langchain4j.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-community-bom</artifactId>
        <version>${langchain4j-beta.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>aliyun-public</id>
      <url>https://maven.aliyun.com/repository/public/</url>
    </repository>
    <repository>
      <id>spring-milestones</id>
      <url>https://repo.spring.io/milestone</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>aliyun-public</id>
      <url>https://maven.aliyun.com/repository/public/</url>
    </pluginRepository>
    <pluginRepository>
      <id>spring-milestones</id>
      <url>https://repo.spring.io/milestone</url>
    </pluginRepository>
  </pluginRepositories>
</project>

